# deepfake-detector

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml  test_model.py
backend/app/: __init__.py  main.py
backend/app/models/: detector.py
backend/app/services/: image_processor.py
backend/app/utils/: validators.py
docs/: .cleanup-notes.md  ARCHITECTURE.md  IMPLEMENTATION_READY.md  MODEL_ACCURACY_TROUBLESHOOTING.md  MODEL_DETECTION_FLOW.md  MODEL_GUIDE.md  MODERN_MODELS_2026.md  PLAN_SUMMARY.md  PROJECT_SUMMARY.md  PYPROJECT_MIGRATION.md  PYTHON_313_COMPATIBILITY.md  QUICKSTART.md  RUN.md  RUNNING_THE_APP.md  SETUP_INSTRUCTIONS.md  TECHNICAL_SPEC.md  TYPESCRIPT_CONVERSION.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ImageUpload.tsx  LoadingSpinner.tsx  ResultsDisplay.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
